# que-script

./: .gitignore  Cargo.toml  FFI.md  README.md  learning-materials.json
lisp/: const.lisp  csv.lisp  ds.lisp  fp.lisp  fusion-builtins.lisp  macros.lisp  std.lisp
miscs/extension/que-lang/: README.md  extension.js  package-lock.json  package.json  que-lang-0.0.3.vsix
miscs/extension/que-lang/syntaxes/: que-shell.injection.json  que.tmLanguage.json
miscs/transpilers/: README.md  clj.sh  clojure.rs  js.rs  js.sh  ocaml.rs  ocaml.sh
releases/: que-lib-aarch64-apple-darwin.lisp  que-lib-x86_64-pc-windows-gnu.lisp  que-lib-x86_64-unknown-linux-gnu.lisp  quec-aarch64-apple-darwin  quec-x86_64-unknown-linux-gnu  quelsp-aarch64-apple-darwin  quelsp-x86_64-unknown-linux-gnu  quewat-aarch64-apple-darwin  quewat-x86_64-unknown-linux-gnu
scripts/: bake.sh  build-all-linux.sh  build-all-windows.sh  build-all.sh  build-c.sh  build-everything.sh  build-fusion-lib.sh  build-io.sh  build-lib.sh  build-libs.sh  build-lsp.sh  build-r.sh  build-wasm-c.sh  build-wat.sh  dump.sh  install-any.sh  install-fusion-only.sh  install-lib-only.sh  install-minimal.sh  install-no-std.sh  install-std-only.sh  install-wat.ps1  install-wat.sh  install-with-std.sh  install.ps1  install.sh  lsp.ps1  lsp.sh  quec.sh  quer.sh  test-baked.sh  to_c.sh  uninstall.ps1  uninstall.sh
src/: baked.rs  externals.rs  infer.rs  io.rs  lib.rs  lsp_native_core.rs  main.rs  op.rs  parser.rs  project.rs  runtime.rs  shell.rs  tests.rs  types.rs  wasm_api.rs  wat.rs
