[package]
name = "que"
version = "0.1.0"
edition = "2021"

[features]
default = ["io"]
compiler = ["dep:wat"]
runtime = ["compiler", "dep:wasmtime"]
io = ["runtime", "dep:wasmtime-wasi"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "que-io"
path = "src/bin/que-io.rs"
required-features = ["io"]

[[bin]]
name = "que-compiler"
path = "src/bin/que-compiler.rs"
required-features = ["compiler"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = "1.1.9"
wasmtime = { version = "42.0.1", optional = true }
wat = { version = "1", optional = true }
wasmtime-wasi = { version = "42.0.1", optional = true }
