[package]
name = "que"
version = "0.1.0"
edition = "2021"

[features]
default = ["io"]
compiler = ["dep:wat"]
runtime = ["compiler", "dep:wasmtime"]
io = ["runtime", "dep:wasmtime-wasi"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "queio"
path = "src/bin/queio.rs"
required-features = ["io"]

[[bin]]
name = "quec"
path = "src/bin/quec.rs"
required-features = ["compiler"]

[[bin]]
name = "quer"
path = "src/bin/quer.rs"
required-features = ["runtime"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = "1.1.9"
wasmtime = { version = "42.0.1", optional = true }
wat = { version = "1", optional = true }
wasmtime-wasi = { version = "42.0.1", optional = true }
